# guihck

./: .gitmodules  CMakeLists.txt  README.md
cmake/: subproject.cmake
example/: CMakeLists.txt  cli-run.c  functions.c  glhckElements.c  guihck-glhck-run.c  listener.c  script.c
example/cli-scm/: alias.scm  bind.scm
example/glhck-scm/: align.scm  button.scm  image.scm  kitt.scm  mouseArea.scm  order.scm  pong.scm  textInput.scm
example/lib/: CMakeLists.txt
example/scm/: functions.scm  script.scm
include/: glhckElements.h  guihck.h  guihckElementUtils.h  guihckElements.h  guihckKeys.h
lib/: CMakeLists.txt
modules/glhck/include/: glhckElements.h
modules/glhck/src/: glhckElements.c
src/: CMakeLists.txt  element.c  guihck.c  guihckElementUtils.c  guihckElements.c  guihckGuile.c  guihckGuile.h  guihckGuileDefaultScm.h  guihckKeys.c  internal.h  mouseArea.c  stack.c
test/: CMakeLists.txt  alias.c  bind.c  glhckElements.c  keybind.c  keyboard.c  listener.c  mouseArea.c  scm-test-runner.c  script.c  simple.c  visible.c
test/cli-scm/: alias.scm  bind.scm
test/glhck-scm/: button.scm  image.scm  mouseArea.scm
test/lib/: CMakeLists.txt
test/scm/: alias.scm  bind.scm  bound.scm  functions.scm  mouseArea.scm  script.scm
